--- a/Estadisticas/Views/Home/viewReporte9.cshtml
+++ b/Estadisticas/Views/Home/viewReporte9.cshtml
@@ -146,6 +146,7 @@
             <li>(*) Literal w) del artículo 363° del Reglamento de la Ley Forestal y de Fauna Silvestre, Ley N° 27308.</li>
             <li>(*) Literal l) del artículo 137.3 del Reglamento para la Gestión Forestal y de Fauna Silvestre en Comunidades Nativas y Comunidades Campesinas aprobado mediante Decreto Supremo N° 021-2015-MINAGRI.</li>
             <li>(*) Literal l) del artículo 207.3 del Reglamento para la Gestión Forestal aprobado mediante Decreto Supremo N° 018-2015-MINAGRI.</li>
+            <li>(*) Numeral 26) Decreto Supremo N° 007-2021-MIDAGRI.</li>
             <li>(**) Para los Contratos de Administración de Bosques Locales se considera el volumen injustificado determinado en la supervisión.</li>
             <li style="margin-top:10px;"><strong>Actualizado al: </strong>@ViewBag.fechaProcess</li>
             <li><strong>Fecha y Hora de Consulta:</strong> @DateTime.Now</li>
