Actualizar URL BI Ind 4 prod

--- a/SIGOFCv3/Areas/General/Views/Reportes/IndicadoresOSINFOR_4.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Reportes/IndicadoresOSINFOR_4.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="card">
         <div class="card-body">
-            <iframe title="OSINFOR-ACCA" width="1500" height="800" src="https://app.powerbi.com/view?r=eyJrIjoiYzQ0YWNmYTUtZmE0OC00NmJmLTkwOTgtNDY4YTlmNmFlOTYxIiwidCI6IjQ3NDliYjcxLWE5YTQtNDAyMi1iMGVjLTE5ZWU5ZTkwYWQ0NyJ9" frameborder="0" allowFullScreen="true"></iframe>
+            <iframe title="OSINFOR-ACCA" width="1500" height="800" src="https://app.powerbi.com/view?r=eyJrIjoiOTRiMmI3NGUtNDgzMC00OWQ2LWExMDgtMDU2YTdmNGZkOTRhIiwidCI6IjQ3NDliYjcxLWE5YTQtNDAyMi1iMGVjLTE5ZWU5ZTkwYWQ0NyJ9&pageName=ReportSectiona5bb9e70e1a30a320c53" frameborder="0" allowFullScreen="true"></iframe>
 
         </div>
     </div>
