--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_incisos.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_incisos.cshtml
@@ -14,7 +14,8 @@
 
             if (value.length > 0) {
                 for (let item of value) {
-                    var codFCTipo = '@Model.hdfCodFCTipo';
+                    //var codFCTipo = '@Model.hdfCodFCTipo';
+                    var codFCTipo = ManRD_AddEdit.frm.find("#hdfCodFCTipo").val();
                     var band = 0;
                     var listaInforme, data;
 
